--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -37,15 +37,11 @@ services:
       - 8001:8001
     depends_on:
       - lbdb
-    command:  >
-      bash -c "sleep 5 && python manage.py migrate &&
-      python manage.py collectstatic --noinput &&
-      python -Wd manage.py runserver 0.0.0.0:8001"
-    logging:
-      driver: none
+    command: >
+      bash -c "sleep 5 && python manage.py migrate && python manage.py collectstatic --noinput && python -Wd manage.py runserver 0.0.0.0:8001"
 
   lbdb:
-    image: postgres:9.6.9-alpine
+    image: postgres:16
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
