--- a/package.json
+++ b/package.json
@@ -173,7 +173,7 @@
     "@storybook/addon-a11y": "^8.1.6",
     "@storybook/addon-essentials": "^8.1.6",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@storybook/addons": "^7.6.17",
+    "@storybook/manager-api": "^8.1.6",
     "@storybook/react": "^8.1.6",
     "@storybook/react-webpack5": "^8.1.6",
     "babel-loader": "^9.1.3",
