--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,19 @@ ignore_ghpages: &ignore_ghpages
         - gh-pages
 
 jobs:
+  arch:
+    machine:
+      image: ubuntu-2004:2024.01.1
+      docker_layer_caching: false
+    steps:
+      - checkout
+      - run:
+          name: Check machine architecture
+          command: uname -m
+      - run:
+          name: Display detailed system information
+          command: uname -a
+
   lint:
     machine:
       image: ubuntu-2004:2024.01.1
@@ -255,6 +268,7 @@ workflows:
   version: 2
   datahub:
     jobs:
+      - arch: *ignore_ghpages
       - lint: *ignore_ghpages
       - unit_tests: *ignore_ghpages
       - unit_client_tests: *ignore_ghpages
