--- a/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_cti.json
+++ b/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_cti.json
@@ -9,21 +9,15 @@
         "dit:dunsNumber": "222222222",
         "id": "dit:DataHubCompany:6cb433cd-a098-e211-a939-e4115bead28a",
         "name": "Shamsung Electronics Europe EHQ (Chertsey) EU HQ",
-        "type": [
-          "Organization",
-          "dit:Company"
-        ]
+        "type": ["Organization", "dit:Company"]
       },
       {
         "dit:jobTitle": "Some job title",
         "dit:emailAddress": "tukite@yahoo.com",
         "id": "dit:DataHubContact:82e24a82-0688-424d-911f-2666d3ddcf9b",
-        "url": "https://www.datahub.dev.uktrade.io/contacts/82e24a82-0688-424d-911f-2666d3ddcf9b/details",
+        "url": "https://dev.datahub.uktrade.digital/contacts/82e24a82-0688-424d-911f-2666d3ddcf9b/details",
         "name": "Reece Stevens",
-        "type": [
-          "Person",
-          "dit:Contact"
-        ]
+        "type": ["Person", "dit:Contact"]
       }
     ],
     "dit:estimatedLandDate": "1973-10-01",
@@ -32,10 +26,8 @@
     },
     "id": "dit:DataHubInvestmentProject:8f2662e9-0691-435f-8edd-7fb9df9d8936",
     "name": "Aphrodite Mcdonald",
-    "type": [
-      "dit:InvestmentProject"
-    ],
-    "url": "https://www.datahub.dev.uktrade.io/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
+    "type": ["dit:InvestmentProject"],
+    "url": "https://dev.datahub.uktrade.digital/investments/projects/8f2662e9-0691-435f-8edd-7fb9df9d8936"
   },
   "generator": {
     "name": "dit:dataHub",
