--- a/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_fdi.json
+++ b/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_fdi.json
@@ -9,43 +9,31 @@
         "dit:dunsNumber": null,
         "id": "dit:DataHubCompany:0f5216e0-849f-11e6-ae22-56b6b6499611",
         "name": "Venus Ltd",
-        "type": [
-          "Organization",
-          "dit:Company"
-        ]
+        "type": ["Organization", "dit:Company"]
       },
       {
         "dit:jobTitle": "Some job title",
         "dit:emailAddress": "dean@cox.com",
         "id": "dit:DataHubContact:952232d2-1d25-4c3a-bcac-2f3a30a94da9",
-        "url": "https://www.datahub.dev.uktrade.io/contacts/952232d2-1d25-4c3a-bcac-2f3a30a94da9",
+        "url": "https://dev.datahub.uktrade.digital/contacts/952232d2-1d25-4c3a-bcac-2f3a30a94da9",
         "name": "Dean Cox",
-        "type": [
-          "Person",
-          "dit:Contact"
-        ]
+        "type": ["Person", "dit:Contact"]
       },
       {
         "dit:jobTitle": "Director",
         "dit:emailAddress": "john@doe.com",
         "id": "dit:DataHubContact:952232d2-1d25-4c3a-bcac-2f3a30a94da8",
-        "url": "https://www.datahub.dev.uktrade.io/contacts/04cadecd-2de4-4cda-9fda-59db93495dba",
+        "url": "https://dev.datahub.uktrade.digital/contacts/04cadecd-2de4-4cda-9fda-59db93495dba",
         "name": "John Doe",
-        "type": [
-          "Person",
-          "dit:Contact"
-        ]
+        "type": ["Person", "dit:Contact"]
       },
       {
         "dit:jobTitle": "Chief Executive",
         "dit:emailAddress": "REPLACED-0001@TEST.HOST",
         "id": "dit:DataHubContact:952232d2-1d25-4c3a-bcac-2f3a30a94da7",
-        "url": "https://www.datahub.dev.uktrade.io/contacts/28f75a93-3c27-e611-9bdc-e4115bead28a/details",
+        "url": "https://dev.datahub.uktrade.digital/contacts/28f75a93-3c27-e611-9bdc-e4115bead28a/details",
         "name": "Mary Marriott",
-        "type": [
-          "Person",
-          "dit:Contact"
-        ]
+        "type": ["Person", "dit:Contact"]
       }
     ],
     "dit:estimatedLandDate": "2020-01-01",
@@ -58,10 +46,8 @@
     "dit:totalInvestment": 1000000,
     "id": "dit:DataHubInvestmentProject:3520b973-0e77-46cf-be75-3585f2f6691e",
     "name": "Wig factory",
-    "type": [
-      "dit:InvestmentProject"
-    ],
-    "url": "https://www.datahub.dev.uktrade.io/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
+    "type": ["dit:InvestmentProject"],
+    "url": "https://dev.datahub.uktrade.digital/investments/projects/3520b973-0e77-46cf-be75-3585f2f6691e"
   },
   "generator": {
     "name": "dit:dataHub",
