--- a/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_non_fdi.json
+++ b/src/client/components/ActivityFeed/__fixtures__/investment_projects/project_added_non_fdi.json
@@ -9,21 +9,15 @@
         "dit:dunsNumber": null,
         "id": "dit:DataHubCompany:0fb3379c-341c-4da4-b825-bf8d47b26baa",
         "name": "Lambda plc",
-        "type": [
-          "Organization",
-          "dit:Company"
-        ]
+        "type": ["Organization", "dit:Company"]
       },
       {
         "dit:jobTitle": "Some job title",
         "dit:emailAddress": "Ruthie.Cole@example.com",
         "id": "dit:DataHubContact:889dc0e6-a60c-4368-822c-e6b644bfcbf7",
-        "url": "https://www.datahub.dev.uktrade.io/contacts/889dc0e6-a60c-4368-822c-e6b644bfcbf7/details",
+        "url": "https://dev.datahub.uktrade.digital/contacts/889dc0e6-a60c-4368-822c-e6b644bfcbf7/details",
         "name": "Ruthie Cole",
-        "type": [
-          "Person",
-          "dit:Contact"
-        ]
+        "type": ["Person", "dit:Contact"]
       }
     ],
     "dit:estimatedLandDate": "2018-12-01",
@@ -32,19 +26,14 @@
     },
     "id": "dit:DataHubInvestmentProject:ff4005e5-f769-43cb-a46f-a483ec20eda7",
     "name": "Refined Rubber Chicken",
-    "type": [
-      "dit:InvestmentProject"
-    ],
-    "url": "https://www.datahub.dev.uktrade.io/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
+    "type": ["dit:InvestmentProject"],
+    "url": "https://dev.datahub.uktrade.digital/investments/projects/ff4005e5-f769-43cb-a46f-a483ec20eda7"
   },
   "actor": {
     "dit:emailAddress": "cmuuser1test@mobile.ukti.gov.uk",
     "id": "dit:DataHubAdviser:8036f207-ae3e-e611-8d53-e4115bed50dc",
     "name": "Test CMU 1",
-    "type": [
-      "Person",
-      "dit:Adviser"
-    ]
+    "type": ["Person", "dit:Adviser"]
   },
   "generator": {
     "name": "dit:dataHub",
