WIP Playwright SSO login

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,9 @@ yalc.lock
 
 # Ignore gh pages for Storybook
 storybook-static/
+
+playwright/.auth
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
