--- a/package.json
+++ b/package.json
@@ -164,12 +164,14 @@
     "@chromatic-com/storybook": "^1.6.0",
     "@cypress/code-coverage": "^3.12.39",
     "@faker-js/faker": "^8.3.1",
+    "@playwright/test": "^1.45.1",
     "@storybook/addon-a11y": "^8.1.11",
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/manager-api": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/react-webpack5": "^8.1.11",
+    "@types/node": "^20.14.10",
     "babel-loader": "^9.1.3",
     "babel-plugin-istanbul": "6.1.1",
     "chai": "^4.4.1",
