--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,12 +7,9 @@ updates:
     day: "monday"
     time: "00:00"
     timezone: Europe/London
-  open-pull-requests-limit: 10
+  open-pull-requests-limit: 0
   ignore:
 # When updating this list please ensure that a ticket for unblocking the update has been added to the TechEx backlog.
-  - dependency-name: react-redux # TET-154
-    versions:
-    - "> 7.2.8"
   - dependency-name: jsdom # TET-371
     versions:
       - "> 20.0.3"
@@ -22,6 +19,12 @@ updates:
   - dependency-name: http-proxy-middleware # TET-698
     versions:
       - "> 2.0.6"
+  - dependency-name: chai-as-promised # TET-757
+    versions:
+      - "> 7.1.2"
+  - dependency-name: history # TET-758
+    versions:
+      - "> 4.10.1"
 
   # These are part of dependency groups and should be updated via the relevant script.
   - dependency-name: "@storybook/addon-a11y"
@@ -68,7 +71,7 @@ updates:
     day: "monday"
     time: "02:00"
     timezone: Europe/London
-  open-pull-requests-limit: 10
+  open-pull-requests-limit: 0
   ignore:
   - dependency-name: eslint # See above
     versions:
