--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^4.1.0",
     "js-beautify": "^1.14.11",
+    "js-cookie": "^3.0.5",
     "jsdom": "^20.0.3",
     "jsdom-global": "^3.0.2",
     "json-schema-faker": "^0.5.5",
