Removed accidentally committed files

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,9 @@
     "plugin:import/recommended",
     "prettier"
   ],
+  
   "settings": {
+    "import/extensions": [".js", ".jsx"],
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
