--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "@nivo/tooltip": "^0.87.0",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@sentry/browser": "^8.28.0",
-    "@sentry/node": "^8.28.0",
-    "@sentry/react": "^8.28.0",
+    "@sentry/browser": "^8.30.0",
+    "@sentry/node": "^8.30.0",
+    "@sentry/react": "^8.30.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "basic-auth": "^2.0.1",
@@ -90,11 +90,11 @@
     "dotenv": "^16.4.4",
     "elastic-apm-node": "^4.7.3",
     "element-closest": "^3.0.2",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-minify-html-2": "^2.0.0",
     "express-session": "^1.17.3",
     "express-sslify": "^1.2.0",
-    "follow-redirects": ">=1.15.6",
+    "follow-redirects": ">=1.15.9",
     "get-form-data": "^3.0.0",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk-elements-sass": "^3.1.3",
@@ -135,7 +135,7 @@
     "remark-gfm": "^4.0.0",
     "request-promise": "^4.2.6",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.77.8",
+    "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "serve-favicon": "^2.5.0",
     "sniffr": "^1.3.1",
@@ -157,33 +157,34 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
     "@babel/runtime": "^7.25.6",
     "@chromatic-com/storybook": "^1.8.0",
-    "@cypress/code-coverage": "^3.12.46",
-    "@faker-js/faker": "^8.3.1",
+    "@cypress/code-coverage": "^3.12.47",
+    "@faker-js/faker": "^9.0.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@storybook/addon-a11y": "^8.2.9",
-    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-a11y": "^8.3.1",
+    "@storybook/addon-essentials": "^8.3.1",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@storybook/manager-api": "^8.2.9",
-    "@storybook/react": "^8.2.9",
-    "@storybook/react-webpack5": "^8.2.9",
+    "@storybook/manager-api": "^8.3.1",
+    "@storybook/react": "^8.3.1",
+    "@storybook/react-webpack5": "^8.3.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-istanbul": "7.0.0",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "chai-subset": "^1.6.0",
-    "cypress": "^13.14.1",
+    "cypress": "^13.14.2",
     "cypress-axe": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "git-directory-deploy": "^1.5.1",
     "html": "^1.0.0",
@@ -211,12 +212,12 @@
     "sinon": "^18.0.0",
     "sinon-chai": "^3.7.0",
     "std-mocks": "^2.0.0",
-    "storybook": "^8.2.9",
+    "storybook": "^8.3.1",
     "supertest": "^7.0.0",
     "webpack": "^5.94.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-node-externals": "^3.0.0"
   },
   "overrides": {
