--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
     machine:
       image: ubuntu-2004:2024.01.1
       docker_layer_caching: false
+    parallelism: 1
+    resource_class: large
     steps:
       - checkout
       - run_make:
