--- a/Dockerfile.dependencies
+++ b/Dockerfile.dependencies
@@ -4,13 +4,13 @@
 FROM cypress/base:20.11.0
 
 # Setting environment variables
-ENV CHROME_VERSION=121.0.6167.85-1
+ENV CHROME_VERSION=129.0.6668.89-1
 ENV CHROME_DOWNLOAD_URL=https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_${CHROME_VERSION}_amd64.deb
-ENV DOCKERIZE_VERSION v0.7.0
-ENV TZ Europe/London
-ENV TERM xterm
-ENV LANG C.UTF-8
-ENV NODE_ENV development
+ENV DOCKERIZE_VERSION=v0.7.0
+ENV TZ=Europe/London
+ENV TERM=xterm
+ENV LANG=C.UTF-8
+ENV NODE_ENV=development
 ENV HOME=/home/node
 ENV PATH="$HOME/.local/bin:$PATH"
 ENV NODE_PATH="$HOME/.local/lib/node_modules:$NODE_PATH"
@@ -53,7 +53,7 @@ COPY --chown=node:node package*.json "$HOME/"
 WORKDIR $HOME
 
 # Install specific version of cypress
-RUN npm install -g cypress@13.14.2 \
+RUN npm install -g cypress@13.15.0 \
   && npx cypress verify \
   && npx cypress cache path \
   && npx cypress cache list \
