--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
   "overrides": {
     "yaml": "^2.2.2",
     "semver": "7.5.2",
-    "tough-cookie": "4.1.3"
+    "tough-cookie": "4.1.3",
+    "jsonpath-plus": "10.0.0"
   }
 }
