--- a/package.json
+++ b/package.json
@@ -80,32 +80,32 @@
     "compression": "^1.7.4",
     "connect-flash": "0.1.1",
     "connect-redis": "7.1.1",
-    "constate": "^3.3.0",
-    "cookie-parser": "^1.4.6",
+    "constate": "^3.3.2",
+    "cookie-parser": "^1.4.7",
     "core-js": "^3.38.1",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
     "date-fns": "^2.30.0",
     "del-cli": "^6.0.0",
-    "dotenv": "^16.4.4",
-    "elastic-apm-node": "^4.7.3",
+    "dotenv": "^16.4.5",
+    "elastic-apm-node": "^4.8.0",
     "element-closest": "^3.0.2",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "express-minify-html-2": "^2.0.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.1",
     "express-sslify": "^1.2.0",
-    "follow-redirects": ">=1.15.9",
+    "follow-redirects": "^1.15.9",
     "get-form-data": "^3.0.0",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^5.6.0",
+    "govuk-frontend": "^5.7.1",
     "govuk-react": "^0.10.7",
     "hawk": "^9.0.2",
-    "history": "^4.10.1",
-    "http-proxy-middleware": "^2.0.4",
-    "joi": "^17.13.1",
+    "history": "^5.3.0",
+    "http-proxy-middleware": "^3.0.3",
+    "joi": "^17.13.3",
     "lodash": "^4.17.21",
-    "markdown-it": "^14.0.0",
+    "markdown-it": "^14.1.0",
     "mini-css-extract-plugin": "^2.9.1",
     "morgan": "^1.10.0",
     "numeral": "^2.0.6",
@@ -113,7 +113,7 @@
     "nunjucks-markdown": "^2.0.1",
     "pluralize": "^8.0.0",
     "postcss-cli": "^11.0.0",
-    "postcss-loader": "^8.1.0",
+    "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "pure-uuid": "^1.8.1",
     "qs": "^6.13.0",
@@ -135,33 +135,33 @@
     "remark-gfm": "^4.0.0",
     "request-promise": "^4.2.6",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.80.3",
+    "sass": "^1.80.4",
     "sass-loader": "^16.0.2",
     "serve-favicon": "^2.5.0",
-    "sniffr": "^1.3.1",
+    "sniffr": "^1.3.2",
     "style-loader": "^4.0.0",
-    "styled-components": "^5.3.11",
+    "styled-components": "^6.1.13",
     "url": "^0.11.4",
-    "uuid": "^10.0.0",
+    "uuid": "^11.0.2",
     "winston": "^3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@babel/eslint-parser": "^7.25.8",
+    "@babel/eslint-parser": "^7.25.9",
     "@babel/helper-call-delegate": "^7.12.13",
-    "@babel/plugin-syntax-import-assertions": "^7.25.6",
-    "@babel/plugin-transform-class-properties": "^7.25.4",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
-    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/plugin-syntax-import-assertions": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.25.9",
+    "@babel/plugin-transform-object-rest-spread": "^7.25.9",
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@babel/register": "^7.25.7",
-    "@babel/runtime": "^7.25.7",
-    "@chromatic-com/storybook": "^1.8.0",
+    "@babel/register": "^7.25.9",
+    "@babel/runtime": "^7.26.0",
+    "@chromatic-com/storybook": "^3.2.0",
     "@cypress/code-coverage": "^3.13.4",
-    "@faker-js/faker": "^9.0.1",
+    "@faker-js/faker": "^9.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@storybook/addon-a11y": "^8.3.6",
     "@storybook/addon-essentials": "^8.3.6",
@@ -171,30 +171,30 @@
     "@storybook/react-webpack5": "^8.3.6",
     "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "7.0.0",
-    "chai": "^4.5.0",
-    "chai-as-promised": "^7.1.2",
+    "chai": "^5.1.2",
+    "chai-as-promised": "^8.0.0",
     "chai-subset": "^1.6.0",
-    "cypress": "^13.15.0",
+    "cypress": "^13.15.1",
     "cypress-axe": "^1.5.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mocha": "^10.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "git-directory-deploy": "^1.5.1",
     "html": "^1.0.0",
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^4.1.0",
-    "js-beautify": "^1.14.11",
+    "js-beautify": "^1.15.1",
     "js-cookie": "^3.0.5",
-    "jsdom": "^20.0.3",
+    "jsdom": "^25.0.1",
     "jsdom-global": "^3.0.2",
-    "json-schema-faker": "^0.5.5",
+    "json-schema-faker": "^0.5.6",
     "lint-staged": "^15.2.10",
     "mocha": "^10.7.3",
     "mocha-junit-reporter": "^2.2.1",
@@ -202,28 +202,28 @@
     "nock": "^13.5.5",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
-    "nyc": "17.0.0",
+    "nyc": "17.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "3.3.3",
     "proxyquire": "^2.1.3",
     "reqres": "^3.0.1",
     "rewire": "^6.0.0",
     "sharp": "^0.33.5",
-    "sinon": "^18.0.0",
-    "sinon-chai": "^3.7.0",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0",
     "std-mocks": "^2.0.0",
     "storybook": "^8.3.6",
     "supertest": "^7.0.0",
     "webpack": "^5.95.0",
-    "webpack-assets-manifest": "^5.1.0",
+    "webpack-assets-manifest": "^5.2.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
     "webpack-node-externals": "^3.0.0"
   },
   "overrides": {
-    "yaml": "^2.2.2",
-    "semver": "7.5.2",
-    "tough-cookie": "4.1.3",
-    "jsonpath-plus": "10.0.0"
+    "yaml": "^2.6.0",
+    "semver": "7.6.3",
+    "tough-cookie": "5.0.0",
+    "jsonpath-plus": "10.1.0"
   }
 }
