--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
     "js-cookie": "^3.0.5",
     "jsdom": "^20.0.3",
     "jsdom-global": "^3.0.2",
-    "json-schema-faker": "^0.5.5",
+    "json-schema-faker": "^0.5.8",
     "lint-staged": "^15.2.10",
     "mocha": "^10.8.2",
     "mocha-junit-reporter": "^2.2.1",
@@ -223,7 +223,6 @@
   "overrides": {
     "yaml": "^2.2.2",
     "semver": "7.5.2",
-    "tough-cookie": "4.1.3",
-    "jsonpath-plus": "10.0.0"
+    "tough-cookie": "4.1.3"
   }
 }
