--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,81 +1,84 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: "weekly"
-    day: "monday"
-    time: "00:00"
-    timezone: Europe/London
-  open-pull-requests-limit: 10
-  ignore:
-# When updating this list please ensure that a ticket for unblocking the update has been added to the TechEx backlog.
-  - dependency-name: jsdom # TET-371
-    versions:
-      - "> 20.0.3"
-  - dependency-name: eslint # Waiting for related dependencies to add support
-    versions:
-      - "> 8.57.0"
-  - dependency-name: http-proxy-middleware # TET-698
-    versions:
-      - "> 2.0.6"
-  - dependency-name: chai-as-promised # TET-757
-    versions:
-      - "> 7.1.2"
-  - dependency-name: history # TET-758
-    versions:
-      - "> 4.10.1"
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+      day: 'monday'
+      time: '00:00'
+      timezone: Europe/London
+    open-pull-requests-limit: 10
+    ignore:
+      # When updating this list please ensure that a ticket for unblocking the update has been added to the TechEx/ backlog.
+      - dependency-name: jsdom # TET-371
+        versions:
+          - '> 20.0.3'
+      - dependency-name: eslint # Waiting for related dependencies to add support
+        versions:
+          - '> 8.57.0'
+      - dependency-name: http-proxy-middleware # TET-698
+        versions:
+          - '> 2.0.6'
+      - dependency-name: chai-as-promised # TET-757
+        versions:
+          - '> 7.1.2'
+      - dependency-name: history # TET-758
+        versions:
+          - '> 4.10.1'
+      - dependency-name: nivo/core # CPS-639
+        versions:
+          - '> 0.87.0'
 
-  # These are part of dependency groups and should be updated via the relevant script.
-  - dependency-name: "@storybook/addon-a11y"
-    versions:
-    - ">= 0"
-  - dependency-name: "@storybook/addon-essentials"
-    versions:
-    - ">= 0"
-  - dependency-name: "@storybook/react-webpack5"
-    versions:
-    - ">= 0"
-  - dependency-name: "@storybook/addon-webpack5-compiler-babel"
-    versions:
-    - ">= 0"
-  - dependency-name: "@storybook/manager-api"
-    versions:
-    - ">= 0"
-  - dependency-name: "storybook"
-    versions:
-    - ">= 0"
-  - dependency-name: "@sentry/node"
-    versions:
-    - ">= 0"
-  - dependency-name: "@sentry/react"
-    versions:
-    - ">= 0"
-  - dependency-name: "@sentry/tracing"
-    versions:
-    - ">= 0"
-  - dependency-name: "@nivo/pie"
-    versions:
-    - ">= 0"
-  - dependency-name: "@nivo/tooltip"
-    versions:
-    - ">= 0"
-  - dependency-name: "cypress-image-diff-js"
-    versions:
-    - ">= 2.2.1"
-  # ignore all GitHub linguist patch updates
-  - dependency-name: "github-linguist"
-    update-types: ["version-update:semver-patch"]
-  rebase-strategy: disabled
-- package-ecosystem: npm
-  directory: "/test/sandbox"
-  schedule:
-    interval: "weekly"
-    day: "monday"
-    time: "02:00"
-    timezone: Europe/London
-  open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: eslint # See above
-    versions:
-      - "> 8.57.0"
+      # These are part of dependency groups and should be updated via the relevant script.
+      - dependency-name: '@storybook/addon-a11y'
+        versions:
+          - '>= 0'
+      - dependency-name: '@storybook/addon-essentials'
+        versions:
+          - '>= 0'
+      - dependency-name: '@storybook/react-webpack5'
+        versions:
+          - '>= 0'
+      - dependency-name: '@storybook/addon-webpack5-compiler-babel'
+        versions:
+          - '>= 0'
+      - dependency-name: '@storybook/manager-api'
+        versions:
+          - '>= 0'
+      - dependency-name: 'storybook'
+        versions:
+          - '>= 0'
+      - dependency-name: '@sentry/node'
+        versions:
+          - '>= 0'
+      - dependency-name: '@sentry/react'
+        versions:
+          - '>= 0'
+      - dependency-name: '@sentry/tracing'
+        versions:
+          - '>= 0'
+      - dependency-name: '@nivo/pie'
+        versions:
+          - '>= 0'
+      - dependency-name: '@nivo/tooltip'
+        versions:
+          - '>= 0'
+      - dependency-name: 'cypress-image-diff-js'
+        versions:
+          - '>= 2.2.1'
+      # ignore all GitHub linguist patch updates
+      - dependency-name: 'github-linguist'
+        update-types: ['version-update:semver-patch']
+    rebase-strategy: disabled
+  - package-ecosystem: npm
+    directory: '/test/sandbox'
+    schedule:
+      interval: 'weekly'
+      day: 'monday'
+      time: '02:00'
+      timezone: Europe/London
+    open-pull-requests-limit: 10
+    ignore:
+      - dependency-name: eslint # See above
+        versions:
+          - '> 8.57.0'
