--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
     "proxyquire": "^2.1.3",
     "reqres": "^3.0.1",
     "rewire": "^6.0.0",
+    "seedrandom": "^3.0.5",
     "sharp": "^0.33.5",
     "sinon": "^18.0.0",
     "sinon-chai": "^3.7.0",
