--- a/.eslintrc
+++ b/.eslintrc
@@ -88,7 +88,17 @@
     ],
     "no-duplicate-imports": "error",
     "import/no-named-as-default": "off",
-    "import/no-named-as-default-member": "off"
+    "import/no-named-as-default-member": "off",
+    "no-restricted-imports": [
+      "error",
+      {
+        "name": "@faker-js/faker",
+        "message": "Use the pseudo-random `faker` from `test/utils.js`"
+      },
+      {
+        "name": "json-schema-faker",
+        "message": "Use the pseudo-random `jsf` from `test/utils.js`"
+      }]
   },
   "overrides": [
     {
