--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,21 +7,21 @@ ignore_ghpages: &ignore_ghpages
         - gh-pages
 
 jobs:
-  # lint:
-  #   machine:
-  #     image: ubuntu-2004:2024.01.1
-  #     docker_layer_caching: false
-  #   parallelism: 1
-  #   resource_class: large
-  #   steps:
-  #     - checkout
-  #     - run_make:
-  #         label: Run linter
-  #         target: lint
-  #     - store_test_results:
-  #         path: reports
-  #     - store_artifacts:
-  #         path: reports
+  lint:
+    machine:
+      image: ubuntu-2004:2024.01.1
+      docker_layer_caching: false
+    parallelism: 1
+    resource_class: large
+    steps:
+      - checkout
+      - run_make:
+          label: Run linter
+          target: lint
+      - store_test_results:
+          path: reports
+      - store_artifacts:
+          path: reports
 
   unit_tests:
     machine:
@@ -227,7 +227,7 @@ workflows:
   version: 2
   datahub:
     jobs:
-      # - lint: *ignore_ghpages
+      - lint: *ignore_ghpages
       - unit_tests: *ignore_ghpages
       - unit_client_tests: *ignore_ghpages
       - functional_tests: *ignore_ghpages
