Add storybook/test dependency to resolve peer dependency issue

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -45,6 +45,9 @@ updates:
       - dependency-name: '@storybook/manager-api'
         versions:
           - '>= 0'
+      - dependency-name: '@storybook/test'
+        versions:
+          - '>= 0'
       - dependency-name: 'storybook'
         versions:
           - '>= 0'
