--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "adr-list": "adr list",
     "adr-graph": "adr generate graph",
     "adr-toc": "adr generate toc",
-    "dependabot:update-storybook": "npm install --save-dev @storybook/addon-a11y@latest @storybook/addon-essentials@latest @storybook/addon-webpack5-compiler-babel@latest @storybook/manager-api@latest @storybook/react@latest @storybook/react-webpack5@latest storybook@latest",
+    "dependabot:update-storybook": "npm install --save-dev @storybook/addon-a11y@latest @storybook/addon-essentials@latest @storybook/addon-webpack5-compiler-babel@latest @storybook/manager-api@latest @storybook/react@latest @storybook/react-webpack5@latest @storybook/test@latest storybook@latest",
     "dependabot:update-sentry": "npm install @sentry/browser@latest @sentry/node@latest @sentry/react@latest",
     "dependabot:update-nivo": "npm install @nivo/core@latest @nivo/pie@latest @nivo/tooltip@latest"
   },
@@ -82,7 +82,7 @@
     "connect-redis": "8.0.1",
     "constate": "^3.3.0",
     "cookie-parser": "^1.4.7",
-    "core-js": "^3.39.0",
+    "core-js": "^3.40.0",
     "css-loader": "^7.1.1",
     "csurf": "^1.11.0",
     "date-fns": "^4.1.0",
@@ -124,9 +124,9 @@
     "react-lines-ellipsis": "^0.15.4",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.5",
     "react-string-replace": "^1.1.1",
-    "react-to-print": "^3.0.4",
+    "react-to-print": "^3.0.5",
     "react-use": "^17.6.0",
     "redis": "4.7.0",
     "redux": "^5.0.1",
@@ -146,12 +146,12 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.26.7",
     "@babel/eslint-parser": "^7.26.5",
     "@babel/helper-call-delegate": "^7.12.13",
     "@babel/plugin-syntax-import-assertions": "^7.25.6",
     "@babel/plugin-transform-class-properties": "^7.25.4",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
     "@babel/plugin-transform-object-rest-spread": "^7.24.7",
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
@@ -163,18 +163,19 @@
     "@cypress/code-coverage": "^3.13.10",
     "@faker-js/faker": "^9.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@storybook/addon-a11y": "^8.5.0",
-    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-a11y": "^8.5.3",
+    "@storybook/addon-essentials": "^8.5.3",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
-    "@storybook/manager-api": "^8.5.0",
-    "@storybook/react": "^8.5.0",
-    "@storybook/react-webpack5": "^8.5.0",
+    "@storybook/manager-api": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/react-webpack5": "^8.5.3",
+    "@storybook/test": "^8.5.3",
     "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "7.0.0",
     "chai": "^4.5.0",
     "chai-subset": "^1.6.0",
     "cypress": "^13.17.0",
-    "cypress-axe": "^1.5.0",
+    "cypress-axe": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
@@ -212,7 +213,7 @@
     "sinon": "^19.0.2",
     "sinon-chai": "^3.7.0",
     "std-mocks": "^2.0.0",
-    "storybook": "^8.5.0",
+    "storybook": "^8.5.3",
     "supertest": "^7.0.0",
     "webpack": "^5.97.1",
     "webpack-assets-manifest": "^5.1.0",
