--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,6 +153,19 @@ jobs:
           label: Run component tests
           target: component-tests
       - store_cypress_artifacts
+      - run:
+          name: Prepare coverage report
+          command: |
+            mkdir -p component-coverage
+            touch component-coverage/.placeholder
+            if [ -f cypress-coverage/coverage-final.json ]; then
+              cp cypress-coverage/coverage-final.json component-coverage/cypress-component-coverage.json
+            fi
+
+      - persist_to_workspace:
+        root: ~/
+        paths:
+          - "project/component-coverage/*"
 
   release-storybook:
     docker:
@@ -176,6 +189,7 @@ jobs:
           at: ~/
       - run: npm i -g add nyc
       - run: cp unit-coverage/unit-coverage.json partial-coverage
+      - run: cp component-coverage/cypress-component-coverage.json partial-coverage
       - run: nyc merge partial-coverage
       - run: mkdir .nyc_output || true
       - run: mv coverage.json .nyc_output/out.json
@@ -256,3 +270,4 @@ workflows:
           requires:
             - functional_tests
             - unit_tests
+            - component_tests
