--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "preview": "npm run build && FORCE_HTTPS=false NODE_ENV=production npm start",
     "watch:test": "npm run test:unit -- -w",
     "lint": "run-p lint:*",
-    "lint:js": "npx eslint --ext .jsx,.js ./test ./src ./assets",
-    "lint:js:fix": "npx eslint --ext .jsx,.js ./test ./src ./assets --fix",
+    "lint:js": "npx eslint ./test ./src ./assets",
+    "lint:js:fix": "npx eslint ./test ./src ./assets --fix",
     "test": "run-s test:*",
     "test:unit:files": "f() { NODE_ENV=test API_ROOT=http://test LOG_LEVEL=info MOCHA_FILE=junit/test-results.xml npx mocha \"${@:-./src/**/*.test.js}\"; }; f",
     "test:unit": "NODE_ENV=test API_ROOT=http://test LOG_LEVEL=info MOCHA_FILE=junit/test-results.xml npx mocha ./src/**/*.test.js --exit",
@@ -161,6 +161,9 @@
     "@babel/runtime": "^7.26.0",
     "@chromatic-com/storybook": "^3.2.3",
     "@cypress/code-coverage": "^3.13.10",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
     "@faker-js/faker": "^9.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@storybook/addon-a11y": "^8.5.3",
@@ -176,8 +179,9 @@
     "chai-subset": "^1.6.0",
     "cypress": "^14.0.2",
     "cypress-axe": "^1.6.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-formatter-junit": "^8.40.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mocha": "^10.5.0",
@@ -187,6 +191,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "git-directory-deploy": "^1.5.1",
+    "globals": "^15.14.0",
     "html": "^1.0.0",
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^4.1.3",
