--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -93,3 +93,11 @@ updates:
       - dependency-name: eslint # See above
         versions:
           - '> 8.57.0'
+  - package-ecosystem: github-actions
+    directory: '/'
+    schedule:
+      interval: 'weekly'
+      day: 'monday'
+      time: '03:00'
+      timezone: Europe/London
+    open-pull-requests-limit: 10
