--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "test": "run-s test:*",
     "test:unit:files": "f() { NODE_ENV=test API_ROOT=http://test LOG_LEVEL=info MOCHA_FILE=junit/test-results.xml npx mocha \"${@:-./src/**/*.test.js}\"; }; f",
     "test:unit": "NODE_ENV=test API_ROOT=http://test LOG_LEVEL=info MOCHA_FILE=junit/test-results.xml npx mocha ./src/**/*.test.js --exit",
-    "test:functional": "CYPRESS_retries=3 nyc cypress run --browser chrome",
-    "test:a11y": "CYPRESS_coverage=false cypress run --config-file cypress.a11y.config.js --browser chrome",
-    "test:a11y:watch": "CYPRESS_coverage=false cypress open --config-file cypress.a11y.config.js --e2e --browser chrome",
+    "test:functional": "CYPRESS_retries=3 nyc cypress run --browser webkit",
+    "test:a11y": "CYPRESS_coverage=false cypress run --config-file cypress.a11y.config.js --browser webkit",
+    "test:a11y:watch": "CYPRESS_coverage=false cypress open --config-file cypress.a11y.config.js --e2e --browser webkit",
     "test:unit-client": "NODE_ENV=test MOCHA_FILE=junit/test-results.xml npx mochapack --webpack-config webpack.node.config.js --opts ./test/unit-client/mocha.opts ./test/unit-client/assets/javascripts/**/*.test.{js,jsx}",
-    "test:functional:watch": "cypress open --e2e --browser chrome",
-    "test:e2e:lep": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/LEP/**/*.js\"]}' --browser chrome",
-    "test:e2e:da": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/DA/**/*.js\"]}' --browser chrome",
-    "test:e2e:dit": "CYPRESS_retries=3 CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/DIT/**/*.js\"]}' --browser chrome",
-    "test:e2e:watch": "CYPRESS_coverage=false cypress open --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/**/*.js\"]}' --e2e --browser chrome",
-    "test:component": "CYPRESS_coverage=false cypress run --component --browser chrome",
-    "test:component:watch": "CYPRESS_coverage=false cypress open --component --browser chrome",
+    "test:functional:watch": "cypress open --e2e --browser webkit",
+    "test:e2e:lep": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/LEP/**/*.js\"]}' --browser webkit",
+    "test:e2e:da": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/DA/**/*.js\"]}' --browser webkit",
+    "test:e2e:dit": "CYPRESS_retries=3 CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/DIT/**/*.js\"]}' --browser webkit",
+    "test:e2e:watch": "CYPRESS_coverage=false cypress open --config '{\"specPattern\":[\"test/end-to-end/cypress/specs/**/*.js\"]}' --e2e --browser webkit",
+    "test:component": "CYPRESS_coverage=false cypress run --component --browser webkit",
+    "test:component:watch": "CYPRESS_coverage=false cypress open --component --browser webkit",
     "coverage": "npx nyc --reporter=html --reporter=json --reporter=text --reporter=lcov --report-dir=coverage npm run test:unit",
     "prune-dev-dependencies": "NPM_CONFIG_PRODUCTION=true npm prune --production",
     "heroku-postbuild": "npm cache verify && npm rebuild && npm run build && npm run prune-dev-dependencies",
