--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,12 +70,15 @@ jobs:
 
   functional_tests:
     machine:
-      image: ubuntu-2004:2024.01.1
+      image: mcr.microsoft.com/playwright:v1.27.0-focal
       docker_layer_caching: true
     parallelism: 9
     resource_class: xlarge
     steps:
       - checkout
+      - run:
+        name: Install webkit and dependencies
+        command: npx playwright install --with-deps webkit
       - run:
           name: Determine specs to run
           command: ./test-parallel.sh test/functional/cypress/specs
