publish: Fix node version for release-storybook (#7618)
generated from commit 4a419f657e7f5ee8673a50ed118e8f1b39de2c5b

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
 
   release-storybook:
     docker:
-      - image: node:20.11.0-buster
+      - image: node:22.12.0-bullseye
     steps:
       - checkout
       - add_ssh_keys:
