Allow uploading of documents via generic document collection

--- a/sample.env
+++ b/sample.env
@@ -115,3 +115,7 @@ OAUTH2_AUTH_URL=http://anyurl/o/authorize
 # Investment S3 Bucket for evidence uploads
 INVESTMENT_DOCUMENT_BUCKET=https://lookInVault.com/
 INVESTMENT_DOCUMENT_AWS_REGION=lookInVault
+
+# S3 Bucket for uploadable documents
+DOCUMENT_BUCKET=data-hub-documents-local
+DOCUMENT_BUCKET_URL_ROOT=http://localhost:4566
